[gd_scene load_steps=4 format=3 uid="uid://bw4w3yu45qrcn"]

[ext_resource type="Script" uid="uid://dyw8ya3nd5lwe" path="res://topping_scenes/fries.gd" id="1_lr7vd"]
[ext_resource type="Texture2D" uid="uid://bd0q0jnccs4ta" path="res://art/Topping Spawners/Fries.png" id="2_kjxti"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l72x1"]
radius = 58.0345

[node name="Fries" type="Node2D"]
script = ExtResource("1_lr7vd")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 0)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_kjxti")

[node name="ToppingHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToppingHitBox"]
shape = SubResource("CircleShape2D_l72x1")

[node name="MouseHitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseHitBox"]
polygon = PackedVector2Array(-28, 37, 30, 43, 54, 9, 35, -42, -37, -39, -45, -24, -40, 22)

[connection signal="body_entered" from="ToppingHitBox" to="." method="_on_topping_hit_box_body_entered"]
[connection signal="mouse_entered" from="MouseHitBox" to="." method="_on_mouse_hit_box_mouse_entered"]
[connection signal="mouse_exited" from="MouseHitBox" to="." method="_on_mouse_hit_box_mouse_exited"]
